# Roomba2-Gazebo

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/com760_Chukwuebuka_Collins/: Bug2.py  controll.py  first.py  second.py
devel/lib/pkgconfig/: com760_Chukwuebuka_Collins.pc
devel/share/com760_Chukwuebuka_Collins/cmake/: com760_Chukwuebuka_CollinsConfig.cmake
src/com760_Chukwuebuka_Collins/: CMakeLists.txt
src/com760_Chukwuebuka_Collins/src/launch/: B00911781.launch  spawn.launch
src/com760_Chukwuebuka_Collins/src/scripts/: Bug0.py  Bug2.py  controll.py  first.py  follow_wall.py
src/com760_Chukwuebuka_Collins/src/urdf/: chassis.xacro  laser_sensor.xacro  robot.urdf  wheels.xacro
